--- a/styles.css
+++ b/styles.css
@@ -276,6 +276,7 @@ li > a {
     object-fit: cover;
     transition: all 1s ease-out;
     cursor: pointer;
+    box-shadow: 5px 5px 10px gray;
 }
 
 .first {
